--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>Tgcom24</title>
 <h1>Tgcom24</h1>
 <h2>URGENTE: Minaccia Nucleare Imminente!</h2>
 <h3>Allarme Rosso: Il Pericolo del Missile Nucleare si Avvicina!</h3>
