--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<link rel="icon" type="image/x-icon" href="./images/Tgcom.ico">
 <title>Tgcom24</title>
 <h1>Tgcom24</h1>
 <h2>URGENTE: Minaccia Nucleare Imminente!</h2>
@@ -29,3 +31,4 @@
 <h4 class="ReactMarkdownParser_TextContainer__RodgY" data-testid="youchat-text">Che Dio benedica l'Italia e la protegga in questo momento di grande difficolt&agrave;. Sappiate che non siete soli, siamo tutti uniti in questa lotta.</h4>
 <h4 class="ReactMarkdownParser_TextContainer__RodgY" data-testid="youchat-text">Con amore e profonda tristezza,</h4>
 <h4 class="ReactMarkdownParser_TextContainer__RodgY" data-testid="youchat-text">Sergio Mattarella</h4>
+</html>
