--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="icon" type="image/x-icon" href="./images/Tgcom.ico">
+<link rel="icon" type="image/x-icon" href="./Tgcom24.ico">
 <title>Tgcom24</title>
 <h1>Tgcom24</h1>
 <h2>URGENTE: Minaccia Nucleare Imminente!</h2>
