--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
+<head>  
 <link rel="icon" type="image/x-icon" href="./Tgcom24.ico">
 <title>Tgcom24</title>
+</head>    
 <h1>Tgcom24</h1>
 <h2>URGENTE: Minaccia Nucleare Imminente!</h2>
 <h3>Allarme Rosso: Il Pericolo del Missile Nucleare si Avvicina!</h3>
